@@ -320,9 +320,12 @@ generalmenu.title.interwiki=Other Sites
 generalmenu.title.virtualwiki=Other Languages
 history.caption.diffnext=next
 history.caption.diffprevious=prev
-history.current=Current Version
 history.diff=Diff Selected
 history.message.notopic=The topic "{0}" could not be found.  It may have been deleted or may not exist.
+history.revision=Revision as of {0} by {1}
+history.revision.current=Current revision
+history.revision.next=Next revision &rarr;
+history.revision.previous=&larr; Previous revision
 history.title={0} History
 import.button.import=Import
 import.caption.overview=Import topics from a file created using the Special\:Export function or from another wiki.
