@@ -226,7 +226,7 @@ generalmenu.jumpto=G\u00E5 til
 generalmenu.search=S\u00F8g
 history.caption.diffnext=next
 history.caption.diffprevious=prev
-history.current=Nuv\u00E6rende version
+history.revision.current=Nuv\u00E6rende version
 history.diff=Diff de valgte
 history.message.notopic=Emnet "{0}" kunne ikke findes. Det kan v\u00E6re slettet eller slet ikke eksistere.
 history.title={0} historik
