@@ -288,7 +288,7 @@ generalmenu.jumpto=>>
 generalmenu.search=Suche
 history.caption.diffnext=n\u00E4chste
 history.caption.diffprevious=vorherige
-history.current=Aktuelle Version
+history.revision.current=Aktuelle Version
 history.diff=Gew\u00E4hlte vergleichen
 history.message.notopic=Artikel "{0}" nicht gefunden. Entweder wurde er gel\u00F6scht oder war noch nicht vorhanden.
 history.title={0} Versionen/Autoren
