@@ -226,7 +226,7 @@ generalmenu.jumpto=Ir a
 generalmenu.search=Buscar
 history.caption.diffnext=next
 history.caption.diffprevious=prev
-history.current=Versi\u00F3n actual
+history.revision.current=Versi\u00F3n actual
 history.diff=Diferencia seleccionada
 history.message.notopic=No se ha encontrado el tema "{0}". Podr\u00EDa no existir o haber sido borrado.
 history.title={0} Historial
