@@ -245,7 +245,7 @@ generalmenu.jumpto=Aller \u00E0
 generalmenu.search=Recherche
 history.caption.diffnext=suivant
 history.caption.diffprevious=pr\u00E9c\u00E9dent
-history.current=Version actuelle
+history.revision.current=Version actuelle
 history.diff=Diff\u00E9rence s\u00E9lectionn\u00E9e
 history.message.notopic=La page "{0}" ne peut \u00EAtre trouv\u00E9e. Elle peut avoir \u00E9t\u00E9 effac\u00E9e ou ne pas exister.
 history.title={0} Historique
