@@ -226,7 +226,7 @@ generalmenu.jumpto=Ir a
 generalmenu.search=Procurar
 history.caption.diffnext=next
 history.caption.diffprevious=prev
-history.current=Versi\u00F3n actual
+history.revision.current=Versi\u00F3n actual
 history.diff=Diferenza seleccionada
 history.message.notopic=Non se atopou o tema "{0}". Poder\u00EDa non existir ou ter sido  borrado.
 history.title={0} Historial
