@@ -226,7 +226,7 @@ generalmenu.jumpto=Idi na
 generalmenu.search=Tra\u017Ei
 history.caption.diffnext=next
 history.caption.diffprevious=prev
-history.current=Trenutna verzija
+history.revision.current=Trenutna verzija
 history.diff=Razlika ozna\u010Dena
 history.message.notopic=The topic "{0}" could not be found.  It may have been deleted or may not exist.
 history.title={0} Povijesne izmjene
