@@ -288,7 +288,7 @@ generalmenu.jumpto=Ugr\u00E1s
 generalmenu.search=Keres\u00E9s
 history.caption.diffnext=k\u00F6vetkez\u0151
 history.caption.diffprevious=el\u0151z\u0151
-history.current=Jelenlegi v\u00E1ltozat
+history.revision.current=Jelenlegi v\u00E1ltozat
 history.diff=Kiv\u00E1lasztott v\u00E1ltozat
 history.message.notopic=A \u201E{0}\u201D sz\u00F3cikk nem tal\u00E1lhat\u00F3. Lehets\u00E9ges, hogy t\u00F6r\u00F6lve lett, vagy nem l\u00E9tezik.
 history.title={0} lapt\u00F6rt\u00E9nete
