@@ -226,7 +226,7 @@ generalmenu.jumpto=Vai a
 generalmenu.search=Cerca
 history.caption.diffnext=next
 history.caption.diffprevious=prev
-history.current=Versione Corrente
+history.revision.current=Versione Corrente
 history.diff=Confronta Selezione
 history.message.notopic=The topic "{0}" could not be found.  It may have been deleted or may not exist.
 history.title={0} History
