@@ -245,7 +245,7 @@ generalmenu.jumpto=Go to
 generalmenu.search=\u691C\u7D22
 history.caption.diffnext=\u6B21\u3078
 history.caption.diffprevious=\u524D\u3078
-history.current=\u73FE\u5728\u306E\u30D0\u30FC\u30B8\u30E7\u30F3
+history.revision.current=\u73FE\u5728\u306E\u30D0\u30FC\u30B8\u30E7\u30F3
 history.diff=\u6307\u5B9A\u3057\u305F\u7248\u3092\u6BD4\u8F03
 history.message.notopic=\u8A18\u4E8B "{0}" \u304C\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3002\u524A\u9664\u3055\u308C\u305F\u304B\u3001\u3082\u3068\u304B\u3089\u5B58\u5728\u3057\u306A\u304B\u3063\u305F\u304B\u3082\u77E5\u308C\u307E\u305B\u3093\u3002
 history.title={0} \u306E\u5C65\u6B74
