@@ -256,7 +256,7 @@ generalmenu.jumpto=Ga naar
 generalmenu.search=Zoek
 history.caption.diffnext=volgende
 history.caption.diffprevious=vorige
-history.current=Huidige versie
+history.revision.current=Huidige versie
 history.diff=Geselecteerde vergelijken
 history.message.notopic=Het onderwerp "{0}" kon niet gevonden worden. Mogelijk bestaat het onderwerp niet of is het verwijdert.
 history.title={0} Geschiedenis
