@@ -226,7 +226,7 @@ generalmenu.jumpto=G\u00E5 til
 generalmenu.search=S\u00F8k
 history.caption.diffnext=next
 history.caption.diffprevious=prev
-history.current=N\u00E5v\u00E6rende versjon
+history.revision.current=N\u00E5v\u00E6rende versjon
 history.diff=Differanse valgt
 history.message.notopic=The topic "{0}" could not be found.  It may have been deleted or may not exist.
 history.title={0} History
