@@ -288,7 +288,7 @@ generalmenu.jumpto=Id\u017A do
 generalmenu.search=Szukaj
 history.caption.diffnext=nast\u0119pne
 history.caption.diffprevious=poprzednie
-history.current=Aktualna wersja
+history.revision.current=Aktualna wersja
 history.diff=Por\u00F3wnaj wybrane
 history.message.notopic=Nie odnaleziono artyku\u0142u "{0}".  Zosta\u0142 usuni\u0119ty lub nie zosta\u0142 utworzony.
 history.title={0} Historia
