@@ -226,7 +226,7 @@ generalmenu.jumpto=Go to
 generalmenu.search=Search
 history.caption.diffnext=next
 history.caption.diffprevious=prev
-history.current=Current Version
+history.revision.current=Current Version
 history.diff=Diff Selected
 history.message.notopic=The topic "{0}" could not be found.  It may have been deleted or may not exist.
 history.title={0} History
