@@ -226,7 +226,7 @@ generalmenu.jumpto=Ir para
 generalmenu.search=Buscar
 history.caption.diffnext=next
 history.caption.diffprevious=prev
-history.current=Vers\u00E3o atual
+history.revision.current=Vers\u00E3o atual
 history.diff=Diferen\u00E7as entre Vers\u00F5es
 history.message.notopic=O t\u00F3pico "{0}" n\u00E3o p\u00F4de ser encontrado. Ele pode ter sido apagado ou n\u00E3o existe.
 history.title=Hist\u00F3rico de "{0}"
