@@ -297,7 +297,7 @@ generalmenu.jumpto=\u041F\u0435\u0440\u0435\u0445\u043E\u0434
 generalmenu.search=\u041F\u043E\u0438\u0441\u043A
 history.caption.diffnext=\u0441\u043B\u0435\u0434\u0443\u044E\u0449\u0435\u0435
 history.caption.diffprevious=\u043F\u0440\u0435\u0434\u044B\u0434\u0443\u0449\u0435\u0435
-history.current=\u0422\u0435\u043A\u0443\u0449\u0430\u044F \u0412\u0435\u0440\u0441\u0438\u044F
+history.revision.current=\u0422\u0435\u043A\u0443\u0449\u0430\u044F \u0412\u0435\u0440\u0441\u0438\u044F
 history.diff=\u041E\u0442\u043B\u0438\u0447\u0438\u044F \u0432\u044B\u0431\u0440\u0430\u043D\u043D\u044B\u0445
 history.message.notopic=\u0422\u0435\u043C\u0430 "{0}" \u043D\u0435 \u043C\u043E\u0433\u043B\u0430 \u0431\u044B\u0442\u044C \u043D\u0430\u0439\u0434\u0435\u043D\u0430. \u041E\u043D\u0430, \u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E, \u0431\u044B\u043B\u0430 \u0443\u0434\u0430\u043B\u0435\u043D\u0430 \u0438\u043B\u0438, \u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E, \u043D\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442.
 history.title=\u0418\u0441\u0442\u043E\u0440\u0438\u044F {0}
