@@ -287,7 +287,7 @@ generalmenu.jumpto=\u0DB8\u0DD9\u0DBA\u0DA7 \u0DBA\u0DB1\u0DCA\u0DB1
 generalmenu.search=\u0DC3\u0DDC\u0DBA\u0DB1\u0DCA\u0DB1
 history.caption.diffnext=\u0D8A\u0DBD\u0D9F
 history.caption.diffprevious=\u0DB4\u0DD9\u0DBB
-history.current=\u0DAF\u0DD0\u0DB1\u0DCA \u0DB4\u0DC0\u0DAD\u0DCA\u0DB1\u0DCF \u0DB4\u0DD2\u0DA7\u0DB4\u0DAD
+history.revision.current=\u0DAF\u0DD0\u0DB1\u0DCA \u0DB4\u0DC0\u0DAD\u0DCA\u0DB1\u0DCF \u0DB4\u0DD2\u0DA7\u0DB4\u0DAD
 history.diff=\u0DAD\u0DDD\u0DBB\u0DCF\u0D9C\u0DAD\u0DCA \u0D91\u0D9A\u0DDA \u0DC0\u0DD9\u0DB1\u0DC3\u0DCA \u0D9A\u0DB8\u0DCA \u0DC3\u0DC3\u0DB3\u0DB1\u0DCA\u0DB1
 history.message.notopic="{0}" \u0DB8\u0DCF\u0DAD\u0DD8\u0D9A\u0DCF\u0DC0 \u0DC3\u0DDC\u0DBA\u0DCF \u0D9C\u0DD0\u0DB1\u0DD3\u0DB8\u0DA7 \u0DB1\u0DDC\u0DC4\u0DD0\u0D9A. \u0D91\u0DBA \u0DB8\u0D9A\u0DCF \u0DAF\u0DB8\u0DCF \u0D87\u0DAD\u0DD2 \u0D91\u0D9A\u0D9A\u0DCA \u0DC4\u0DDD \u0DB1\u0DD2\u0DBB\u0DCA\u0DB8\u0DCF\u0DAB\u0DBA \u0DB1\u0DDC\u0D9A\u0DBB\u0DB1 \u0DBD\u0DAF\u0DCA\u0DAF\u0D9A\u0DCA \u0DC0\u0DD2\u0DBA \u0DC4\u0DD0\u0D9A.
 history.title={0} \u0D89\u0DAD\u0DD2\u0DC4\u0DCF\u0DC3\u0DBA
