@@ -226,7 +226,7 @@ generalmenu.jumpto=Prejs\u0165 na
 generalmenu.search=H\u013Eada\u0165
 history.caption.diffnext=next
 history.caption.diffprevious=prev
-history.current=Aktu\u00E1lna verzia
+history.revision.current=Aktu\u00E1lna verzia
 history.diff=Rozdiel vybran\u00FDch
 history.message.notopic=T\u00E9ma "{0}" nebola n\u00E1jden\u00E1.  Mohla by\u0165 odstr\u00E1nena alebo neexistuje.
 history.title={0} Hist\u00F3ria
