@@ -226,7 +226,7 @@ generalmenu.jumpto=G\u00E5 till
 generalmenu.search=S\u00F6k
 history.caption.diffnext=next
 history.caption.diffprevious=prev
-history.current=Aktuell version
+history.revision.current=Aktuell version
 history.diff=Diff vald
 history.message.notopic=The topic "{0}" could not be found.  It may have been deleted or may not exist.
 history.title={0} History
