@@ -226,7 +226,7 @@ generalmenu.jumpto=\u041F\u0435\u0440\u0435\u0439\u0442\u0438
 generalmenu.search=\u041F\u043E\u0448\u0443\u043A
 history.caption.diffnext=next
 history.caption.diffprevious=prev
-history.current=\u0410\u043A\u0442\u0443\u0430\u043B\u044C\u043D\u0430 \u0432\u0435\u0440\u0441\u0456\u044F
+history.revision.current=\u0410\u043A\u0442\u0443\u0430\u043B\u044C\u043D\u0430 \u0432\u0435\u0440\u0441\u0456\u044F
 history.diff=\u0420\u0456\u0437\u043D\u0438\u0446\u044F \u043C\u0456\u0436 \u0432\u0438\u0431\u0440\u0430\u043D\u0438\u043C\u0438 \u0432\u0435\u0440\u0441\u0456\u044F\u043C\u0438
 history.message.notopic=The topic "{0}" could not be found.  It may have been deleted or may not exist.
 history.title={0} \u0406\u0441\u0442\u043E\u0440\u0456\u044F
