@@ -256,7 +256,7 @@ generalmenu.jumpto=\u5B9A\u4F4D
 generalmenu.search=\u641C\u7D22
 history.caption.diffnext=\u4E0B\u4E00\u4E2A
 history.caption.diffprevious=\u4E0A\u4E00\u4E2A
-history.current=\u5F53\u524D\u7248\u672C
+history.revision.current=\u5F53\u524D\u7248\u672C
 history.diff=\u9009\u62E9\u533A\u5DEE\u5F02
 history.message.notopic=\u4E3B\u9898 "{0}" \u672A\u53D1\u73B0\u3002\u8BE5\u4E3B\u9898\u53EF\u80FD\u88AB\u5220\u9664\u6216\u8005\u6839\u672C\u4E0D\u5B58\u5728\u3002
 history.title={0} \u5386\u53F2
