@@ -245,7 +245,7 @@ generalmenu.jumpto=\u79fb\u81f3
 generalmenu.search=\u641c\u5c0b
 history.caption.diffnext=\u4e0b\u4e00\u7248
 history.caption.diffprevious=\u4e0a\u4e00\u7248
-history.current=\u76ee\u524d\u7248\u672c
+history.revision.current=\u76ee\u524d\u7248\u672c
 history.diff=\u9078\u53d6\u7248\u672c\u9593\u7684\u5dee\u7570
 history.message.notopic=\u627e\u4e0d\u5230\u4e3b\u984c "{0}"\u3002\u8a72\u4e3b\u984c\u53ef\u80fd\u5df2\u88ab\u522a\u9664\uff0c\u6216\u662f\u6839\u672c\u5c31\u4e0d\u5b58\u5728\u3002
 history.title={0} \u7684\u6b77\u53f2\u8a18\u9304
